Cuarto commit Proyecto blog tire

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -47,5 +47,10 @@
         grid-column: 1;
         grid-row: 3;
     }
-    
+    .cards-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+    }
 }
