--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ footer p {
     padding: 10px;
     background-color: var(--icons-color);
     border-radius: 20px;
-    box-shadow: 10px 10px 5px 0px rgba(192, 189, 189, 0.75);;
+    box-shadow: 10px 10px 5px 0px rgba(192, 189, 189, 0.75);
 }
 .porcentaje-info-container .info-container-example {
     grid-column: 1;
@@ -311,3 +311,82 @@ footer p {
     border: 2px solid var(--header-green);
     padding: 5px;
 }
+
+.section-cards-container-reventon {
+    padding: 0 20px 50px;
+    margin-top: 50px;
+}
+.section-cards-container-reventon h2 {
+    color: var(--blue-title);
+    text-align: center;
+    border-bottom: 2px solid var(--background-fondo);
+    padding-bottom: 20px;
+}
+.cards-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    padding-top: 30px;
+}
+.cards-info {
+    width: 250px;
+    height: 350px;
+    border: 2px solid var(--background-fondo);
+    padding: 30px;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 8px 8px 5px 0px rgba(192, 189, 189, 0.75);
+}
+.text-danger {
+    color: red;
+}
+.cards-info img {
+    width: 70px;
+}
+.advertencia-container {
+    margin-top: 60px;
+    width: 100%;
+}
+.advertencia-image-container {
+    width: 100%;
+    height: 400px;
+    background-image: url("../assents/imagenrecomendaciones.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.advertencia-container-info {
+    background-color: var(--background-fondo);
+}
+.advertencia-container-info h3 {
+    color: #133e64;
+}
+.advertencia-container-info ol li {
+    color: red;
+}
+
+.section-formula-container {
+    display: flex;
+    justify-content: center;
+}
+.formula-container {
+    width: 100%;
+    text-align: center;
+    background-color: var(--textt-ancla);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.formula-container .formula {
+    color: var(--header-green);
+    font-size: 18px;
+    padding: 20px;
+}
+.formula-container p {
+    font-size: 28px;
+    font-weight: bold;
+    color: var(--header-green);
+}
+
